--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,11 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-color: #282c34;
-  height: 100vmax; 
+  background-image: linear-gradient(#282c34, #add8ff);
 }
 
 .App-logo {
-  height: 65px;
+  height: 100vmax;
 }
 
 .App-header {
