--- a/src/Pages/Onload/Onload.css
+++ b/src/Pages/Onload/Onload.css
@@ -1,15 +1,87 @@
 .logo{
-    margin-top: 65px;
-    margin-left: 50px;
+    margin-top: 4%;
+    margin-left: 5%;
     padding: 0%;
-    width: 300px;
+    width: 250px;
     top: 0;
-    z-index: 1;
     position: fixed;
 }
 .backgroundImage{
-    position: relative;
-    margin-left: 50%;
-    width: 50%;
-    margin-bottom: 5%
+    position: fixed;
+    width: 90%;
+    margin-left: 3%;
+}
+.signIn{
+    box-shadow:0 0 6px #add8ff;
+    cursor: pointer;
+    position: fixed;
+    font-family: 'Comfortaa', cursive;
+    background-image: linear-gradient(#add8ff, #6c839b);
+    margin-left: 5%;
+    margin-top: 46%;    
+    color:white;
+    border: none;
+    border-radius: 80px;
+    width: 150px;
+    padding: 10px;
+
+}
+.signUp{
+    box-shadow:0 0 6px #add8ff;
+    cursor: pointer;
+    position: fixed;
+    font-family: 'Comfortaa', cursive;
+    background-image: linear-gradient(#add8ff, #6c839b);
+    margin-left: 20%;
+    margin-top: 46%;    
+    color:white;
+    border: none;
+    border-radius: 80px;
+    width: 150px;
+    padding: 10px;
+}
+.textOne{
+    font-family: 'Comfortaa', cursive;
+    cursor: default;
+    width: 36%;
+    font-size: 1.75rem;
+    margin-left: 5%;
+    position: fixed;
+    margin-top: 18%;
+    color: #add8ff;
+    line-height: 120%;
+    font-weight: bolder;
+    letter-spacing: 1px;
+}
+.textTwo{
+    font-family: 'Comfortaa', cursive;
+    cursor: default;
+    width: 36%;
+    font-size: 1.75rem;
+    margin-left: 5%;
+    position: fixed;
+    margin-top: 31%;
+    color: #add8ff;
+    line-height: 120%;
+    font-weight: bolder;
+    letter-spacing: 1px;
+}
+.devs{
+    animation-duration: 1s;
+    animation-delay: 1s;
+    animation-iteration-count: initial;
+    width: 150px;
+    right: 14%;
+    bottom: 10%;
+    position: fixed;
+}
+.mail{
+    animation-duration: 1s;
+    animation-delay: 2.5s;
+    animation-iteration-count: initial;
+    width: 150px;
+    right: 30%;
+    top: 14%;
+    position: fixed;
+    color: #6c839b;
 }
