--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -1,8 +1,15 @@
 .signup-form{
-background-color: #add8ff;
-width: 100%;
-max-width: 450px;
-padding: 15px;
-margin: auto;
-height: 100%;
+    position: fixed;
+    background-color: #add8ff;
+    width: 50%;
+    padding: 50px;
+    margin-top: 10%;
+    margin-left: 25%;
+    height: 65%;
+    border-radius: 15px;
+}
+
+.form-group{
+    margin: 0%;
+    padding: 0;
 }
