--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,39 +1,34 @@
 .navbar{
     position: fixed;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin: 0;
+    z-index: 1;
 }
 .App-logo{
+    position: relative;
     width:10%;
-    height: 10%;
-    margin-top: 15px;
+    height: 1%;
+    margin-top: 2.25%;
+    margin-left: 1%;
     float: left;
-
+    cursor: pointer;
 }
 a{
+    cursor: pointer;
     color: #add8ff;
     font-family: 'Comfortaa', cursive;
 }
-.nav-link{
-    padding-top: 45px;
-}
-ul{
-    padding: 0;
-    margin: 0;
-}
-li{
-    padding-top: 10px;
-    padding-left: 10px;
-    display: block;
-    text-decoration: none;
-    float: right;
-    cursor: pointer;
-}
-li :hover{
+a:hover{
     color: white;
     text-decoration: none;
 }
+.nav-link{
+   margin-top: 4%;
+   padding-left: 1rem;
+}
+li{
+    display: block;
+    text-decoration: none;
+    float: right;
+}
 #project{
-margin-right: 50%;
+    margin-right: 48%;
 }
