--- a/client/src/Pages/Onload/Onload.css
+++ b/client/src/Pages/Onload/Onload.css
@@ -2,9 +2,9 @@
     margin-top: 4%;
     margin-left: 5%;
     padding: 0%;
-    width: 250px;
     top: 0;
     position: fixed;
+    width: 20%;
 }
 .backgroundImage{
     position: fixed;
