--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
   padding: 0;
   background-image: linear-gradient(#282c34, #add8ff);
   height: 100vmax;
+  max-width: 100vmax;
   overflow: hidden;
 }
 
