--- a/client/src/Pages/MainPage/Main.css
+++ b/client/src/Pages/MainPage/Main.css
@@ -1,25 +1,10 @@
-
-.logoMultiple{
-    margin-left:3;
-    padding: 0;
-    max-width: 100%;
-    position: fixed;
-    overflow-x: hidden;
-}
 .cards{
-      z-index: 1;
     padding: 1%;
     margin-top: 11%;
+    animation: card 1250ms ease forwards;
+    transition: 0.5s ease
 }
-#cardSearch{
-  
-}
-#cardWorks{
-
-}
-#cardUser{
- 
-}
-#cardProject{
-  
+@keyframes card{
+    from{ transform: translateX(-300%)}
+    to{transform: translateX(3%)}
 }
