--- a/client/src/Pages/Onload/Onload.css
+++ b/client/src/Pages/Onload/Onload.css
@@ -8,8 +8,9 @@
 }
 .backgroundImage{
     position: fixed;
-    width: 90%;
-    margin-left: 3%;
+    width: 55%;
+    right:7%;
+    top:22%;
 }
 .signIn{
     box-shadow:0 0 6px #add8ff;
@@ -77,7 +78,7 @@
 }
 .mail{
     animation-duration: 1s;
-    animation-delay: 2.5s;
+    animation-delay: 2.25s;
     animation-iteration-count: initial;
     width: 150px;
     right: 30%;
