user profile and edit profile done

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,12 +5,10 @@
   background-image: linear-gradient(#282c34, #add8ff);
   height: 100vmax;
   max-width: 100vmax;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
-.App-logo {
-  height: 100vmax;
-}
+
 
 
 
