--- a/client/src/Pages/SignUp/SignUp.css
+++ b/client/src/Pages/SignUp/SignUp.css
@@ -1,48 +1,69 @@
-h1{
+.signup-form{
+    cursor: default;
+    position: fixed;
+    background-image: linear-gradient(#282c34, #add8ff);
+    width: 45%;
+    padding: 2%;
+    border-radius: 15px;
+    top: 3%;
+    left:28%;
+}
+.backButton{
+    box-shadow:0 0 6px #add8ff;
+    cursor: pointer;
     font-family: 'Comfortaa', cursive;
+    background-image: linear-gradient(#add8ff, #6c839b);  
+    color:white;
+    border: none;
+    border-radius: 80px;
+    padding: 2%;
+    float: left;
+}
+.text-center{
+    font-family: 'Comfortaa', cursive;
+    font-size: 2em;
     font-weight: bold;
     color: #add8ff;
+    margin-left: 3%;
+    margin-top: 1.5%;
+}
+.sign-up-form-group{
+    margin-top: 5%;
 }
 label{
     font-family: 'Comfortaa', cursive;
     color: #add8ff;
-    padding-top: 2%;
-}
-.signup-form{
-    position: fixed;
-    background-image: linear-gradient(#282c34, #add8ff);
-    width: 45%;
-    padding: 50px;
-    margin-top: 10%;
-    height: 75%;
-    border-radius: 15px;
-    left:28%;
+    /* padding-top: 2%; */
 }
 #signupbtn{
+    cursor: pointer;
     font-family: 'Comfortaa', cursive;
     color: white;
     background-color:rgb(51, 51, 51);   
     margin-top: 3%; 
     text-align: start;
+    border: none;  
+
+}
+#signupbtn:hover{
+    background-color:rgb(109, 109, 109); 
+    border: none;  
 }
 input{
     font-family: 'Comfortaa', cursive;
 }
 .gitText{
+    font-size: 1em;
     font-family: 'Comfortaa', cursive;
     color: #282c34;
     font-family: 'Open Sans', sans-serif;
 }
-.backButton{
-    box-shadow:0 0 6px #add8ff;
-    cursor: pointer;
-    position: fixed;
-    font-family: 'Comfortaa', cursive;
-    background-image: linear-gradient(#add8ff, #6c839b);
-    margin-left: 30%;
-    margin-top: 12%;    
-    color:white;
-    border: none;
-    border-radius: 80px;
-    padding: 5px;
-}
+@media only screen and (max-width: 600px) {
+    .signup-form{
+        width: 80%;
+        padding: 1.5%;
+        top: 10%;
+        left:10%;
+    }
+  }
+
