--- a/client/src/components/Wrapper/style.css
+++ b/client/src/components/Wrapper/style.css
@@ -1,6 +1,6 @@
 .wrapper {
   background-image: url(../../images/logo-multiple.png);
-  min-height: 100%;
-  padding-bottom: 100px;
-  
+  height: 100vmax;
+  max-width: 100vmax;
+  overflow-x: hidden;
 }
