--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,17 @@
+body {
+  background-image: linear-gradient(to bottom, #282c34, #add8ff);
+  height: 100vmax;
+  max-width: 100vmax;
+  overflow-x: hidden;
+}
+
 .App {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(#282c34, #add8ff);
+  background-image: url(../src/images/logo-multiple.png);
   height: 100vmax;
   max-width: 100vmax;
-  overflow-x: hidden;
 }
 
 
