--- a/client/src/components/DevCard/DevCard.css
+++ b/client/src/components/DevCard/DevCard.css
@@ -3,10 +3,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-.section{
-    padding: 10rem 0;
-
-}
 .dev-name{
     cursor: default;
     font-family: 'Comfortaa', cursive;
@@ -25,7 +21,8 @@
     align-items: center;
     align-content: center;
     flex-direction: row;
-    padding: 0 .5rem;
+    justify-content: space-evenly;
+    margin: 1% 0;
 }
 .dev-card{
     background-color: #282c34;
@@ -36,7 +33,6 @@
     align-content: center;
     align-items: center;
     justify-content: center;
-    margin: -4rem 0;
     box-shadow: .5rem .5rem 3rem rgba(0, 0, 0, 2)
 }
 .dev-card-back-img{
