--- a/client/src/Pages/DevSearch/DevSearch.css
+++ b/client/src/Pages/DevSearch/DevSearch.css
@@ -1,17 +1,8 @@
-/* .flex-container {
-    display: flex;
-    flex-wrap: wrap;
-  } */
   .dev-search-row{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
+    justify-content: space-evenly;
   }
   
-  .dev-search-column {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
-  }
