--- a/client/src/Pages/SignUp/SignUp.css
+++ b/client/src/Pages/SignUp/SignUp.css
@@ -1,13 +1,25 @@
 
+.container-signup{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    margin: 3% 0;
+}
 .signup-form{
     cursor: default;
-    position: fixed;
+    display: flex;flex-direction: column;
+    justify-content: space-evenly;
     background-image: linear-gradient(#282c34, #add8ff);
     width: 45%;
     padding: 2%;
     border-radius: 15px;
-    top: 3%;
-    left:28%;
+}
+.row-signup-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .backButton{
     box-shadow:0 0 6px #add8ff;
@@ -17,8 +29,9 @@
     color:white;
     border: none;
     border-radius: 80px;
-    padding: 2%;
+    width: 30px;
     float: left;
+  
 }
 .text-center{
     font-family: 'Comfortaa', cursive;
@@ -31,10 +44,8 @@
 .sign-up-form-group{
     margin-top: 5%;
 }
-.signup-label{
-    font-family: 'Comfortaa', cursive;
+.sign-up-form-group label{
     color: #add8ff;
-    /* padding-top: 2%; */
 }
 #signupbtn{
     cursor: pointer;
@@ -62,9 +73,6 @@
 @media only screen and (max-width: 600px) {
     .signup-form{
         width: 80%;
-        padding: 1.5%;
-        top: 10%;
-        left:10%;
     }
   }
 
