--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -56,7 +56,7 @@
     cursor: pointer;
 }
 
-@media screen and (max-width:1024px){
+/* @media screen and (max-width:1024px){
     .nav-links{
         width: 60%;
     }
@@ -116,4 +116,4 @@ transform: rotate(-45deg )translate(-5px,6px);
 .toogle .line3{
     transform: rotate(45deg) translate(-5px,-6px);
 
-}
+} */
