--- a/client/src/Pages/EditUser/EditUser.css
+++ b/client/src/Pages/EditUser/EditUser.css
@@ -1,106 +1,95 @@
-.profile-pic{
-    width: 80%;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.username-edit-user-page{
+    cursor: default;
+    font-family: 'Comfortaa', cursive;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    letter-spacing: 3px;
+    text-align: center;
+    color: #5a6f47;
+    position: relative;
+}
+.edit-card{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin: 1% 0;
+}
+.edit-user-dev-card{
+    background-color: #282c34;
+    border-radius: 3%;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    box-shadow: .5rem .5rem 3rem #add8ff;
+}
+.edit-dev-card-back-img{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* -webkit-clip-path: inset(0 0 29% 0);
+    clip-path: inset(0 0 29% 0); */
+    background-image: linear-gradient(#282c34, #add8ff);
+    border-radius: 6%;
+    margin: 0 3%;
+    padding: 10% 0;
+}
+.edit-user-dev-card-img{
+    /* margin-top: -19rem;
+    border-radius: 50%; */
+    width: 50%;
+    padding: 5% 0;
+    /* -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%); */
+
+}
+.edit-user-dev-link-info{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    align-content: center;
+    align-items: center;
+    list-style: none;
+    padding: 3% 3%;
+}
+
+.edit-user-dev-link-info span{
+    color: #add8ff;
+    font-size: 1em;
+    font-family: 'Comfortaa', cursive;
+}
+
+#buttonSaveInfo{
+    width: 45%;
+    margin: 6% 0;
+}
+
+@media only screen and (max-width: 600px) {
+    .edit-card{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
     }
-    .card{
-        cursor:default;
-        position: fixed;
-        background-image: linear-gradient(#282c34, #add8ff);
-        width: 45%;
-        padding: 5%;
-        height: 65%;
-        border-radius: 15px;
-        top: 20%;
-        left:28%;
-        border: none;
+    .edit-user-dev-card{
+        flex-direction: column;
+        margin: 0 3%;
     }
-    .username-edit-user-page{
-        width: 85%;
-        font-family: 'Comfortaa', cursive;
-        font-size: 1.5em;
-        margin-left: 1%;
-        font-weight: bold;
-        color: #add8ff;
+    .edit-user-dev-card-img{
+        width: 30%;
+        padding: 5% 0;
     }
-    .github{
-        font-family: 'Comfortaa', cursive;
-        font-size: 1em;
-        color: #add8ff;
+    .edit-dev-card-back-img{
+        padding: 5% 0;
     }
-    .email{
-        font-family: 'Comfortaa', cursive;
-        font-size: 1em;
-        color: #add8ff;
-    }
-    .website{
-        font-family: 'Comfortaa', cursive;
-        font-size: 1em;
-        color: #add8ff;
-    }
-    .languages{
-        font-family: 'Comfortaa', cursive;
-        font-size: 1em;
-        color: #add8ff;
-    }
-    .user-card-span{
-        font-family: 'Open Sans', sans-serif;
-    }
-    #buttonSaveInfo{
-        border-color: #dc3545;
-        background-color: #dc3545;
-        cursor: pointer;
-        margin-top: 10%;
-        width:25%;
-        float: right;
-    }
-    .user-card-respoonsive-col-info{
-        margin-top: 0%;
-    }
-    .user-card-respoonsive-col-pic{
-        margin-top: 0%;
-    }
-    
-    @media only screen and (max-width: 600px) {
-        .profile-pic{
-            width: 110%;
-            }
-        .card{
-            width: 95%;
-            padding: 5%;
-            height: 55%;
-            top: 20%;
-            left:2.5%;
-        }
-        .username-edit-user-page{
-            width: 85%;
-            font-family: 'Comfortaa', cursive;
-            font-size: 1.5em;
-            margin-left: 1%;
-            font-weight: bold;
-            color: #add8ff;
-        }
-        .github{
-            font-size: 1em;
-        }
-        .email{
-            font-size: 1em;
-        }
-        .website{
-            font-size: 1em;
-        }
-        .languages{
-            font-family: 'Comfortaa', cursive;
-            font-size: 1em;
-            color: #add8ff;
-        }
-        .user-card-respoonsive-col-info{
-            margin-top: 5%;
-        }
-        .user-card-respoonsive-col-pic{
-            margin-top: 5%;
-        }
-        .btn{
-            margin-top: 18%;
-            width:25%;
-            float: right;
-        }
-      }
+  }
