--- a/client/src/Pages/Onload/Onload.css
+++ b/client/src/Pages/Onload/Onload.css
@@ -65,6 +65,9 @@
     width: 150px;
     padding: 10px;
 }
+button:focus{
+outline: none;
+}
 .backgroundImage{
  width: 100%;
  margin: 10% 0;
@@ -140,10 +143,11 @@
 
   @media only screen and (max-width: 600px) {
     .backgroundImage{
-        width: 105%;
-        margin: 5% 0;
+        display: none;
+    
        }
        .logo{
+    margin-top: 25%;
         width: 50%;
     }
     .textOne{
