--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -5,115 +5,61 @@
 }
 .navbar{
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: row;
+    justify-content:space-evenly;
     align-items: center;
     min-height: 8vh;
-}
-.nav-links{
-    display: flex;
-    justify-content: space-around;
-    width: 45%;
-}
-.nav-links a{
-    color: #add8ff;
-    font-family: 'Comfortaa', cursive;
-    font-weight: bold;
-    letter-spacing: 1px;
-    padding: 0 1px;
-}
-.nav-links li{
-    margin-top: 10%;
-    list-style: none;
+    margin-top: 1%;
 }
 .App-logo{
     width:120px;
     height:50px;
     text-decoration: none;
+    margin-left: 1rem;
     transition: 0.5s ease
 }
 .App-logo:hover{
     transform: scale(1.2);
 }
-.anchor-nav{
+.nav-links{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    width: 80%;
+    justify-content: space-evenly;
+    font-family: 'Comfortaa', cursive;
+    font-weight: bold;
+    letter-spacing: 1px;
+    list-style: none;
     cursor: pointer;
     text-decoration: none;
-    color: #add8ff;
     font-family: 'Comfortaa', cursive;
+    margin: 0;
+    padding-top: 2.75%;
+}
+.nav-links li a{
+    color: #add8ff;
 }
 .anchor-nav:hover{
     text-decoration: none;
     color: white
 }
-.burger div{
-    width:25px;
-    height: 5px;
-    margin: 2px;
-    background-color: #add8ff;
-    transition: all 0.3s ease;
-}
-.burger{
-    display: none;
-    cursor: pointer;
-}
 
-/* @media screen and (max-width:1024px){
-    .nav-links{
-        width: 60%;
-    }
-}
+
 @media screen and (max-width:768px){
-    body{
-        overflow-x: hidden;
-    }
     .nav-links{
-        position: absolute;
-        right:0px;
-        height: 92vh;
-        top:8vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50%;
-        transform: translate(100%);
-        transition: transform 0.5s ease-in;
-        background-image: linear-gradient(to bottom, #282c34, #add8ff);
-    }
-    .nav-links li{
-        opacity: 3;
-    }
-    .burger{
-        display: block;
-    }
-    .navbar ul{
-        z-index: 2;
-    }
-    .nav-links a{
-        color: #add8ff;
-    }
-}
-.nav-active{
-    transform: translateX(0%);
-}
-
-@keyframes navLinkFade{
-    from{
-opacity: 0;
-transform: translateX(50px)
-    }
-    to{
-opacity: 1;
-transform: translateX(0px)
-
+     display: none;
     }
 }
 
-.toogle .line1{
-transform: rotate(-45deg )translate(-5px,6px);
+@media screen and (min-width:769px){
+    .navbar-togglebutton{
+    display: none;
+    }
+    .App-logo{
+        margin-left: 0;
+    }
 }
-.toogle .line2{
-    opacity: 0;
-}
-.toogle .line3{
-    transform: rotate(45deg) translate(-5px,-6px);
 
-} */
+
