--- a/client/src/components/DevSearchCards/DevSearchCards.css
+++ b/client/src/components/DevSearchCards/DevSearchCards.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+/* }
 .section{
     padding: 10rem 0;
 
@@ -84,4 +84,4 @@
     color: #add8ff;
     font-family: 'Comfortaa', cursive;
     font-size: 1em;
-}
+} */
